--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "bulma": "^0.7.1",
+    "di-vue-mask": "^1.1.0",
     "firebase": "^5.0.4",
     "font-awesome": "^4.7.0",
     "module": "^1.2.5",
@@ -24,6 +25,7 @@
     "vue-resource": "^1.5.1",
     "vue-router": "^3.0.1",
     "vue-textarea-autosize": "^1.0.4",
+    "vue-the-mask": "^0.11.1",
     "vue2-animate": "^2.0.0",
     "vue2-transitions": "^0.2.3"
   },
