--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "@xkeshi/vue-countdown": "^1.0.0",
     "axios": "^0.18.0",
     "bulma": "^0.7.1",
     "di-vue-mask": "^1.1.0",
@@ -22,6 +23,7 @@
     "vue-autosize-textarea": "0.0.1",
     "vue-croppa": "^1.3.6",
     "vue-cropperjs": "^2.2.1",
+    "vue-loading-spinner": "^1.0.11",
     "vue-material": "^1.0.0-beta-10.2",
     "vue-resource": "^1.5.1",
     "vue-router": "^3.0.1",
