--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "@fortawesome/fontawesome": "^1.1.8",
+    "@fortawesome/fontawesome-svg-core": "^1.2.0",
+    "@fortawesome/free-solid-svg-icons": "^5.1.0",
+    "@fortawesome/vue-fontawesome": "^0.1.0",
     "@xkeshi/vue-countdown": "^1.0.0",
+    "async-lodash": "^1.0.9",
     "axios": "^0.18.0",
     "bulma": "^0.7.1",
     "di-vue-mask": "^1.1.0",
@@ -33,6 +38,7 @@
     "vue2-transitions": "^0.2.3"
   },
   "devDependencies": {
+    "@fortawesome/fontawesome-free": "^5.1.0",
     "autoprefixer": "^7.1.2",
     "babel-core": "^6.22.1",
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
