--- a/firebase.json
+++ b/firebase.json
@@ -1,6 +1,6 @@
 {
   "hosting": {
-    "public": "public",
+    "public": "dist",
     "ignore": [
       "firebase.json",
       "**/.*",
@@ -9,11 +9,11 @@
   },
   "database": {
     "rules": "database.rules.json"
-  },
-  "functions": {
-    "predeploy": [
-      "npm --prefix \"%RESOURCE_DIR%\" run lint"
-    ],
-    "source": "functions"
   }
+  // "functions": {
+  //   "predeploy": [
+  //     "npm --prefix \"%RESOURCE_DIR%\" run lint"
+  //   ],
+  //   "source": "functions"
+  // }
 }
