--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "vue-autosize-textarea": "0.0.1",
     "vue-croppa": "^1.3.6",
     "vue-cropperjs": "^2.2.1",
+    "vue-instagram": "^2.0.1",
     "vue-loading-spinner": "^1.0.11",
     "vue-material": "^1.0.0-beta-10.2",
     "vue-resource": "^1.5.1",
