--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "vue-textarea-autosize": "^1.0.4",
     "vue-the-mask": "^0.11.1",
     "vue2-animate": "^2.0.0",
+    "vue2-touch-events": "^1.0.0",
     "vue2-transitions": "^0.2.3"
   },
   "devDependencies": {
