--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "vue-instagram": "^2.0.1",
     "vue-loading-spinner": "^1.0.11",
     "vue-material": "^1.0.0-beta-10.2",
+    "vue-recaptcha": "^1.1.1",
     "vue-resource": "^1.5.1",
     "vue-router": "^3.0.1",
     "vue-sticky": "^3.3.4",
