--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "aws-sdk": "^2.274.1",
     "axios": "^0.18.0",
     "bcrypt": "^3.0.0",
+    "bootstrap-vue": "^2.0.0-rc.11",
     "bulma": "^0.7.1",
     "di-vue-mask": "^1.1.0",
     "dns": "^0.2.2",
@@ -27,6 +28,7 @@
     "firebase-admin": "^5.12.1",
     "firebase-functions": "^1.1.0",
     "font-awesome": "^4.7.0",
+    "localStorage": "^1.0.3",
     "module": "^1.2.5",
     "npm": "^6.1.0",
     "npm-check": "^5.7.1",
