get respond from DTNL

--- a/.firebaserc
+++ b/.firebaserc
@@ -1,6 +1,7 @@
 {
   "projects": {
     "rnkm": "rnkm-cu102",
-    "default": "rnkm-emergency"
+    "default": "rnkm-emergency",
+    "rnkm-emer": "rnkm-emergency"
   }
 }
