--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "krist pornpairin",
   "private": true,
   "scripts": {
+    "init": "yarn install  --ignore-engines",
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
     "start": "npm run dev",
     "build": "node build/build.js"
